# HA525

./: CMakeLists.txt  README.md
src/forms/: aboutwindow.ui  mainwindow.ui
src/headers/: aboutwindow.h  laneDetection.h  mainwindow.h
src/resource/: resources.qrc
src/sources/: aboutwindow.cpp  kernel.cu  laneDetection.cpp  main.cpp  mainwindow.cpp
utils/: capture.py
